--- a/Lab1_eng/templates/Lab1/my_messages.html
+++ b/Lab1_eng/templates/Lab1/my_messages.html
@@ -50,7 +50,7 @@
               {% for get_message in get_messages %}
               <tr>
                 <!-- <th scope="row">1</th> -->
-                <td>{{ get_message.recipient }}</td>
+                <td>{{ get_message.author }}</td>
                 <td>{{ get_message.text }}</td>
                 <td>{{ get_message.pub_date }}</td>
               </tr>
@@ -84,7 +84,7 @@
             {% for send_message in send_messages %}
             <tr>
               <!-- <th scope="row">1</th> -->
-              <td>{{ send_message.recipient }}</td>
+              <td>{{ send_message.author }}</td>
               <td>{{ send_message.text }}</td>
               <td>{{ send_message.pub_date }}</td>
             </tr>
